Setup webpack for webapp

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US" style="height: 100%;">
 <head>
     <title>ANSI Art</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css" />
@@ -14,15 +14,7 @@
   <h1>Ansi Art</h1>
 
   <div class='color-picker'></div>
-
-
-
-
-
-
-
-
-
+  <div class='cleafix'></div>
   <div class="container">
     <div class='block' data-bg='#fff'>&#xa0;&#xa0;&#xa0;&#xa0;</div>
     <div class='block'>&#xa0;&#xa0;&#xa0;&#xa0;</div>
@@ -446,7 +438,7 @@
 
   </div>
 
-  <script src='./main.js'></script>
+  <script src='./index.js'></script>
 
 </body>
 
