Implement ANSI download

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,17 +8,15 @@
 </head>
 
 <body>
-  <div>&#x275A;</div>
-  <div>&#x2758;</div>
-  <div>&#x2759;</div>
-  <h1>Ansi Art</h1>
+  <h1>ANSI Art</h1>
+  <div>❚❘❘❚❚❚❘❙❘❙❚❚❘❘❘❘❘❘❘❘❘❘❘❘❚❚❘❘❘❚❚❘❘❘❚❚❘❘❘❚❚❘❙❙</div>
 
   <div class='color-picker'></div>
   <div class='cleafix'></div>
   <div class="art-board"></div>
-
+  <div class='cleafix'></div>
+  <a id='download' href='data:text/plain;charset=utf-8,' download='art.ansi'>download</a>
   <script src='./index.js'></script>
-
 </body>
 
 </html>
