--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,8 +14,29 @@
   <div class='color-picker'></div>
   <div class='cleafix'></div>
   <div class="art-board"></div>
-  <div class='cleafix'></div>
-  <a id='download' href='data:text/plain;charset=utf-8,' download='art.ansi'>download</a>
+  <div class='cleafix'></div><br/>
+
+  <a class='btn' id='download' href='data:text/plain;charset=utf-8,' download='art.ansi'>
+    <svg fill="#616161" height="24" viewBox="0 0 24 24" width="24">
+      <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
+      <path d="M0 0h24v24H0z" fill="none"/>
+    </svg>
+    &nbsp;Download Art
+  </a> &nbsp; &nbsp;
+
+
+  <label class='btn' id='upload'>
+    <input id='upload-ip' type='file' accept='.ansi'/>
+    <svg fill="#616161" height="24" viewBox="0 0 24 24" width="24">
+      <path d="M0 0h24v24H0z" fill="none"/>
+      <path d="M9 16h6v-6h4l-7-7-7 7h4zm-4 2h14v2H5z"/>
+    </svg>
+    <span>&nbsp;Load Art</span>
+  </label>
+
+
+
+
   <script src='./index.js'></script>
 </body>
 
