--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('./sw.js', { scope: './' }).then(function(){
-          console.log('service worker regeistered!');
+          console.log('service worker registered!');
         })
       }
     </script>
