--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,20 +1,20 @@
 <html lang="en-US" style="height: 100%;">
 <head>
-    <title>ANSI Art</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <link rel="icon" href="favicon.png" />
-    <link rel="canonical" href="http://localhost:8080/ansi-art/webapp/" />
+  <title>ANSI Art</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="icon" href="favicon.png">
+  <link rel="canonical" href="http://localhost:8080/ansi-art/webapp/">
 
-    <script type="text/javascript">
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./sw.js', { scope: './' }).then(function(){
-          console.log('service worker registered!');
-        })
-      }
-    </script>
+  <script type="text/javascript">
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./sw.js', { scope: './' }).then(function(){
+        console.log('service worker registered!');
+      })
+    }
+  </script>
 </head>
 
 <body>
@@ -53,19 +53,8 @@
     </a>
   </div>
 
-
-
-  <script src='./index.js'></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-43397380-7', 'auto');
-    ga('send', 'pageview');
-
-  </script>
+  <script src='index.js'></script>
+  <script src='analytics.js'></script>
 </body>
 
 </html>
